# heavy-ai-assist

./: .gitignore  _typos.toml  main.py  openapi.yaml  pyproject.toml
src/: main.py  model copy.py  model.py
src/common/: env_config.py
src/dal/models/: exercise_hevy.py  rpe_hevy.py  set_hevy.py  set_type_hevy.py  workout_hevy.py
src/dal/repositories/: hevy_api.py
