[project]
name = "hevy-ai-assist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datamodel-code-generator>=0.28.5",
    "orjson>=3.10.16",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "setuptools>=78.1.0",
    "uplink>=0.9.7",
]
